--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -20,7 +20,10 @@ a{
 ul {
     list-style: none;
 }
-
+.container {
+    max-width: 1200px;
+    margin: auto;
+}
 /* -------------------header---------------- */
 .header-content {
     justify-content: space-between;
@@ -104,21 +107,166 @@ a{
     justify-content: space-between;
 }
 .container {
-    max-width: 1500px;
+    max-width: 1200px;
     margin: auto;
 }
 .row{
     display: flex;
     flex-wrap: wrap;
 }
+.top {
+    padding: 12px 0;
+    align-items: center;
+    display: block;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: all 0.3s ease;
+
+}
+.top.active {
+    background-color: rgba(255, 255, 255, 1);
+}
+.top:hover {
+    background-color: rgba(255, 255, 255, 1);
+}
+
+.top-logo {
+    flex: 1;
+}
+.top-menu-items {
+    flex: 3;
+}
+.top-menu-items >ul{
+    height: 100%;
+    display: flex;
+}
+.top-menu-items > ul > li {
+    font-family: var(--main-text-font);
+    padding: 0 12px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+    position: relative;
+}
+.top-menu-items ul li::before {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 50px;
+    bottom: -50%;
+}
+.top-menu-items ul li:nth-child(4) {
+    color: red;
+}
+.top-menu-items ul li:nth-child(5) {
+    color: red;
+}
+.top-menu-item {
+    position: absolute;
+    width: 200px;
+    top: 100px;
+    display: none;
+    opacity: 0;
+    transition: all 0.5s ease;
+    background-color: #ffff;
+    height: auto!important;
+    padding: 6px;
+    border: 1px solid #dddddd;
+
+    
+}
+.top-menu-items ul li:hover .top-menu-item {
+    display: block;
+    top: 60px;
+    opacity: 1;
+}
+.top-menu-item li {
+   line-height: 25px;
+   display: flex;
+   justify-content: left!important;
+  
+}
+.top-menu-item li a {
+    font-size: 12px;
+    text-align: left;
+    text-transform: capitalize;
+    color: #333;
+    font-family: var(--main-text-font);
+}
+
+
+/* top-menu-icons */
+.top-menu-icons {
+    flex: 1;
+}
+.top-menu-icons ul {
+    display: flex;
+    height: 100%;
+}
+.top-menu-icons ul li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 12px;
+}
+.top-menu-icons ul li {
+    position: relative;
+    
+}
+.top-menu-icons ul li::before {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 15px;
+    width: 1px;
+    background-color: #333;
+    right: 0;
+}
+.top-menu-icons ul li:last-child::before {
+    display: none;
+}
+.top-menu-icons ul li:first-child input {
+    width: 150px;
+    border: none;
+    background-color: transparent;
+    border-bottom: 1px solid #333;
+    padding: 0 0 4px 6px
+    
+}
+.top-menu-icons ul li:first-child i {
+    position: absolute;
+    font-size: 12px;
+    right: 12px;
+}
+.top-menu-icons ul i {
+    cursor: pointer;
+}
 
 /* ---------------------Cartegory------------------------------------- */
 .cartegory {
     padding: 100px 0 0;
 }
+.cartegory-top {
+    margin-bottom: 50px;
+}
+.cartegory-top p {
+    font-family: var(--main-text-font);
+    margin: 0 12px;
+    font-size: 12px;
+}
 .cartegory-left {
     width: 40%;
 }
+
+
 .cartegory-left ul li {
     padding: 12px 0;
 }
@@ -128,12 +276,14 @@ a{
     font-weight: bold;
     font-family: var(--main-text-font);
     cursor: pointer;
-    
 }
-
+.cartegory-left ul li ul li {
+    padding-left: 10px;
+}
 .cartegory-left-li ul{
     display: none;
     
+
 }
 .cartegory-left-li.block ul {
     display: block;
@@ -141,7 +291,6 @@ a{
 .cartegory-left ul li ul li a {
     color: #333333;
     font-size: 22px;
-    
 }
 
  /* -----------------------footer-------------------- */
