Đang fix Admin vs Shopping Cart

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,6 +111,9 @@ a{
     display: flex;
     flex-wrap: wrap;
 }
+#hello_text{
+    display: block;
+}
 
 /* ---------------------Cartegory------------------------------------- */
 .cartegory {
