--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,119 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap");
-:root {
-    --main-font: "Montserrat", sans-serif;
-}
-html {
-    scroll-behavior: smooth;
-}
-* {
-    margin: 0;
-    padding: 0;
-    color: #333;
-    font-family: var(--main-font);
-}
-.row {
-    display: flex;
-}
-a{
-    text-decoration: none;
-}
-ul {
-    list-style: none;
-}
-
-/* -------------------header---------------- */
-.header-content {
-    justify-content: space-between;
-    align-items: center;
-}
-.header-content-logo {
-    width: 20%;
-}
-.header-content-logo img {
-    width: 100px;
-}
-.header-content-nav {
-    width: 50%;
-}
-.header-content-nav ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.header-content-nav ul li {
-    margin-right: 12px;
-}
-.header-content-nav ul li:hover a{
-    color: #82c1de;
-}
-.header-content-nav ul li a {
-    font-weight: bold;
-    font-size: 18px;
-    transition: all 0.3s ease;
-}
-.header-content-search {
-    width: 20%;
-}
-.header-content-search input {
-    border: none;
-    outline: none;
-    border-bottom: 1px solid #dddd;
-}
-.header-content-search i {
-    cursor: pointer;
-}
-.header-content-icon {
-    width: 10%;
-    text-align: right;
-}
-.header-content-icon img {
-    width: 20px;
-    margin-left: 6px;
-    cursor: pointer;
-}
-header {
-    position: fixed;
-    height: 80px;
-    z-index: 1000;
-    width: 100vw;
-    top: 0;
-    left: 0;
-    background-color: white;
-}
-.slider {
-    margin-top: 80px;
-}
-
-:root {
-    --main-text-font: Arial, Helvetica, sans-serif;
-}
-* { 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-}
-li {
-    list-style: none;
-}
-a{
-    text-decoration: none;
-    
-}
-.space-between {
-    justify-content: space-between;
-}
-.container {
-    max-width: 1500px;
-    margin: auto;
-}
-.row{
-    display: flex;
-    flex-wrap: wrap;
-}
-#hello_text{
-    display: block;
-}
 
 /* ---------------------Cartegory------------------------------------- */
 .cartegory {
@@ -160,42 +44,24 @@ a{
     width: 100%;
     text-align: center;
 }
-
- /* -----------------------footer-------------------- */
-footer {
-    background-color: #e4e4e4;
-    padding: 100px 0 10px;
-}
-footer p {
-    color: #333;
-}
-.footer-content {
-    justify-content: space-between;
-}
-.footer-content h3 {
-    margin-bottom: 12px;
-    font-weight: bold;
-    font-size: 16px;
-}
-.footer-content p {
-    margin-bottom: 6px;
-}
-.footer-content-social {
-    text-align: center;
-    padding: 50px 0 20px;
-}
-.footer-content-social i {
-    font-size: 20px;
-    margin-right: 12px;
-    cursor: pointer;
-}
-.footer-copyright {
-    text-align: center;
-}
-.footer-img {
-    text-align: center;
-}
-.footer-img img {
+/* nut mua*/
+.product-content-right-product-button button {
     width: 150px;
+    height: 40px;
+    display: block;
+    margin: 20px 0 12px;
+    transition: all 0.3s ease;
+    margin-left: 75px;
 }
-/* ------------ */               
+.product-content-right-product-button button:first-child {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: #ffff;
+        border: 2px solid black;
+        cursor: pointer;
+}
+.product-content-right-product-button button:first-child:hover {
+    background-color: black;
+    color: #ffff;
+}
