--- a/public/css/shoppingcard.css
+++ b/public/css/shoppingcard.css
@@ -11,12 +11,15 @@ body{
 }
 
 .section_1{
-    width: 100%;
+   
     display: flex; 
     margin-top: 1em;
     
 }
-
+#pay{
+    width: 100%;
+    height: 120px;   
+}
 section h2{
     font-weight: 500px;
     margin-top: 100px;
@@ -99,7 +102,7 @@ section h2{
     background-color: black;
     color: white;
 }
-#pay #btn_pay{
+ #btn_pay{
     float: right;
     width: 30%;
     margin: 20px 30px 12px;
@@ -110,6 +113,10 @@ section h2{
   
 }
 #pay #btn_pay:hover{
+    background-color: black;
+    color: white;
+}
+#pay #btn_delAll:hover{
     background-color: black;
     color: white;
 }
@@ -131,4 +138,4 @@ a{
 
 /* #btn_pay:hover{
     background-color: rgb(131, 122, 106);
-} */
+}  */
