--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -227,3 +227,21 @@ a {
 #logo{
     max-width:45%;
 }
+#edit_Box{
+    text-align: right;
+}
+#Content_Box td{
+    border-color: black;
+}
+#edit_Box table tr{
+    display: flex;
+    justify-content: space-between;
+}
+#edit_Box table tr #titleEdit{
+    margin-left: 50px;
+    border: 0px;
+}
+#edit_Box table tr td {
+    border: 0px;
+    margin-left: 20px;
+}
