--- a/public/css/shoppingcard.css
+++ b/public/css/shoppingcard.css
@@ -107,7 +107,7 @@ section h2{
     border-radius: 3px;
     padding: 1em;
     background-color: #ffff;
-  
+    cursor : pointer;
 }
 #pay #btn_pay:hover{
     background-color: black;
