--- a/public/css/shoppingcard.css
+++ b/public/css/shoppingcard.css
@@ -12,17 +12,21 @@ body{
 
 .section_1{
     width: 100%;
+
     display: flex; 
     margin-top: 1em;
-    
+
 }
 
+#pay{
+    width: 100%;
+    height: 120px;   
+}
 section h2{
     font-weight: 500px;
     margin-top: 100px;
    
 } 
-
 .content1_1{
     width: 70%;
     margin-top: 0.3em;
@@ -74,7 +78,6 @@ section h2{
     margin-left: 0.5em;
     padding: 3% 1em;
 }
-
 .menu_img{
     width: 10em;
     height: 10em;
@@ -100,6 +103,7 @@ section h2{
     color: white;
 }
 #pay #btn_pay{
+ 
     float: right;
     width: 30%;
     margin: 20px 30px 12px;
@@ -107,9 +111,13 @@ section h2{
     border-radius: 3px;
     padding: 1em;
     background-color: #ffff;
-    cursor : pointer;
+  
 }
 #pay #btn_pay:hover{
+    background-color: black;
+    color: white;
+}
+#pay #btn_delAll:hover{
     background-color: black;
     color: white;
 }
@@ -128,7 +136,3 @@ a{
     padding: 1em;
     background-color: w;
 }
-
-/* #btn_pay:hover{
-    background-color: rgb(131, 122, 106);
-} */
