--- a/public/css/blogs.css
+++ b/public/css/blogs.css
@@ -278,13 +278,13 @@ a{
 
  /* -----------------------footer-------------------- */
 footer {
-    background-color: #e4e4e4;
+    background-color: black;
     margin-top: 100px;
     padding: 100px 0 10px;
     width:100%;
 }
 footer p {
-    color: #333;
+    color: white;
 }
 .footer-content {
     justify-content: space-between;
@@ -389,6 +389,7 @@ body {
   
   /* Header/Blog Title */
   .header {
+    margin-top: 2em;
     padding: 30px;
     font-size: 40px;
     text-align: center;
